<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">EvaluaTool</string>
    <string name="ADMOB_MASTER_KEY" translatable="false">ca-app-pub-6355378855577476~8089782740</string>
    <string name="PRIVACY_POLICY_URL" translatable="false">https://github.com/figonzal1/EvaluaTool/blob/main/privacy_policy.md</string>
    <string name="ADMOB_ID_BANNER_MAIN" translatable="false">ca-app-pub-6355378855577476/3579176413</string>
    <string name="ADMOB_ID_BANNER_EVALUAS" translatable="false">ca-app-pub-6355378855577476/2063216085</string>
    <string name="ADMOB_ID_APPOPEN" translatable="false">ca-app-pub-6355378855577476/3483598214</string>
    <string name="ADMOB_ID_INTERSTITIAL" translatable="false">ca-app-pub-6355378855577476/7878386216</string>
    <string name="ADMOB_ID_NATIVE">ca-app-pub-6355378855577476/1859239943</string>
    <string name="DATETIME_FORMAT" translatable="false" tools:keep="@string/DATETIME_FORMAT">yyyy-MM-dd HH:mm:ss</string>
    <string name="TOOLBAR_EVALUA_0" translatable="false">Evalúa 0</string>
    <string name="TOOLBAR_CLASIFICACION" translatable="false">Clasificación</string>
    <string name="TOOLBAR_SERIES" translatable="false">Series</string>
    <string name="TOOLBAR_CLASIFICACIONES" translatable="false">Clasificaciones</string>
    <string name="TOOLBAR_ORG_PERCEPTIVA" translatable="false">Organización Perceptiva</string>
    <string name="TOOLBAR_LETRAS_NUMEROS" translatable="false">Letras y Números</string>
    <string name="TOOLBAR_MEMORIA_VERBAL" translatable="false">Memoria Verbal</string>
    <string name="TOOLBAR_COPIA_DIBUJOS" translatable="false">Copia de Dibujos</string>
    <string name="TOOLBAR_PALABRAS_FRASES" translatable="false">Palabras y Frases</string>
    <string name="TOOLBAR_RECEPCION_AUDITIVA" translatable="false">Recepción Auditiva y Articulación</string>
    <string name="TOOLBAR_HABILIDADES_FONOLOGICAS" translatable="false">Habilidades Fonológicas</string>
    <string name="TOOLBAR_GRAFOMOTRICIDAD" translatable="false">Grafomotricidad</string>
    <string name="TOOLBAR_INDICE_GENERAL_ESPACIAL" translatable="false">Índice General Espacial</string>
    <string name="TOOLBAR_INDICE_GENERAL_LINGUISTICO" translatable="false">Índice General Linguístico</string>
    <string name="EVALUA_0_MODULO_1" translatable="false">Capacidades Cognitivas</string>
    <string name="EVALUA_0_MODULO_2" translatable="false">Capacidades Espaciales</string>
    <string name="EVALUA_0_MODULO_3" translatable="false">Capacidades Linguísticas</string>
    <string name="EVALUA_0_M1_SI_1" translatable="false">Clasificación [CA-0]</string>
    <string name="EVALUA_0_M1_SI_2" translatable="false">Series [SE-0]</string>
    <string name="EVALUA_0_M1_SI_3" translatable="false">Organización Perceptiva [OP-0]</string>
    <string name="EVALUA_0_M1_SI_4" translatable="false">Letras y Números [LN-0]</string>
    <string name="EVALUA_0_M1_SI_5" translatable="false">Memoria Verbal [MV-0]</string>
    <string name="EVALUA_0_M1_SI_6" translatable="false">Índice General Cognitivo</string>
    <string name="EVALUA_0_M2_SI_1" translatable="false">Copia de Dibujos [CD-0]</string>
    <string name="EVALUA_0_M2_SI_2" translatable="false">Grafomotricidad [GR-0]</string>
    <string name="EVALUA_0_M2_SI_3" translatable="false">Índice General Espacial</string>
    <string name="EVALUA_0_M3_SI_1" translatable="false">Palabras y Frases [PF-0]</string>
    <string name="EVALUA_0_M3_SI_2" translatable="false">Recepción Auditiva y Articulación [RA-0]</string>
    <string name="EVALUA_0_M3_SI_3" translatable="false">Habilidades Fonológicas [HF-0]</string>
    <string name="EVALUA_0_M3_SI_4" translatable="false">Índice General Linguístico</string>
    <string name="TOOLBAR_EVALUA_1" translatable="false">Evalúa 1</string>
    <string name="TOOLBAR_NIVELES_ADAPTACION" translatable="false">Niveles de Adaptación</string>
    <string name="EVALUA_1_MODULO_1" translatable="false">Memoria y Atención</string>
    <string name="EVALUA_1_MODULO_2" translatable="false">Bases del Razonamiento</string>
    <string name="EVALUA_1_MODULO_3" translatable="false">Niveles de Adaptación</string>
    <string name="EVALUA_1_MODULO_4" translatable="false">Lectura</string>
    <string name="EVALUA_1_MODULO_5" translatable="false">Escritura</string>
    <string name="EVALUA_1_MODULO_6" translatable="false">Aprendizajes Matemáticos</string>
    <string name="EVALUA_1_M1_SI_1" translatable="false">Memoria y Atención [MA-1]</string>
    <string name="EVALUA_1_M2_SI_1" translatable="false">Series [RE-1]</string>
    <string name="EVALUA_1_M2_SI_2" translatable="false">Clasificaciones [CL-1]</string>
    <string name="EVALUA_1_M2_SI_3" translatable="false">Organización Perceptiva [OP-1]</string>
    <string name="EVALUA_1_M3_SI_1" translatable="false">Niveles de Adaptación [NA-1]</string>
    <string name="EVALUA_1_VALORACION_BASES_RAZONAMIENTO" translatable="false">Valoración Global De Las Bases Del Razonamiento</string>
    <string name="EVALUA_1_VALORACION_LECTURA" translatable="false">Valoración Global De La Lectura</string>
    <string name="EVALUA_1_VALORACION_ESCRITURA" translatable="false">Valoración Global De La Escritura</string>
    <string name="EVALUA_1_M4_SI_1" translatable="false">Comprensión Lectora [CL-1]</string>
    <string name="EVALUA_1_M4_SI_2" translatable="false">Exactitud Lectora [EL-1]</string>
    <string name="EVALUA_1_M5_SI_1" translatable="false">Ortografía Fonética [OF-1]</string>
    <string name="EVALUA_1_M5_SI_2" translatable="false">Ortografía Visual [OR-1]</string>
    <string name="EVALUA_1_M6_SI_1" translatable="false">Cálculo y Numeración [CN-1]</string>
    <string name="TOOLBAR_EVALUA_2" translatable="false">Evalúa 2</string>
    <string name="EVALUA_2_MODULO_1" translatable="false">Bases del Razonamiento</string>
    <string name="EVALUA_2_MODULO_2" translatable="false">Memoria y Atención</string>
    <string name="EVALUA_2_MODULO_3" translatable="false">Niveles de Adaptación</string>
    <string name="EVALUA_2_MODULO_4" translatable="false">Lectura</string>
    <string name="EVALUA_2_MODULO_5" translatable="false">Escritura</string>
    <string name="EVALUA_2_MODULO_6" translatable="false">Aprendizajes Matemáticos</string>
    <string name="EVALUA_2_M1_SI_1" translatable="false">Pensamiento Analógico [PA-2]</string>
    <string name="EVALUA_2_M1_SI_2" translatable="false">Organización Perceptiva [OP-2]</string>
    <string name="EVALUA_2_M1_SI_3" translatable="false">Clasificaciones [CA-2]</string>
    <string name="EVALUA_2_M2_SI_1" translatable="false">Memoria y Atención [MA-2]</string>
    <string name="EVALUA_2_M3_SI_1" translatable="false">Niveles de Adaptación [NA-2]</string>
    <string name="EVALUA_2_M4_SI_1" translatable="false">Comprensión Lectora [CL-2]</string>
    <string name="EVALUA_2_M5_SI_1" translatable="false">Ortografía [OR-2]</string>
    <string name="EVALUA_2_M6_SI_1" translatable="false">Cálculo y Numeración [CN-2]</string>
    <string name="EVALUA_2_M6_SI_2" translatable="false">Resolución de Problemas [RP-2]</string>
    <string name="EVALUA_2_VALORACION_GLOBAL_RAZONAMIENTO" translatable="false">Valoración Global Del Razonamiento</string>
    <string name="EVALUA_2_VALORACION_GLOBAL_LECTURA" translatable="false">Valoración Global De La Lectura</string>
    <string name="EVALUA_2_VALORACION_GLOBAL_ESCRITURA" translatable="false">Valoración Global De La Escritura</string>
    <string name="EVALUA_2_VALORACION_GLOBAL_MATEMATICA" translatable="false">Valoración Global De Las Matemáticas</string>
    <string name="EVALUA_2_INDICE_GENERAL_COGNITIVO" translatable="false">Índice General Cognitivo</string>
    <string name="EVALUA_2_INDICE_GENERAL_LECTURA" translatable="false">Índice General de Lectura</string>
    <string name="EVALUA_2_INDICE_GENERAL_ESCRITURA" translatable="false">Índice General de Escritura</string>
    <string name="EVALUA_2_INDICE_GENERAL_MATEMATICO" translatable="false">Índice General Matemático</string>
    <string name="TOOLBAR_INDICE_GENERAL_COGNITIVO" translatable="false">Índice General Cognitivo</string>
    <string name="TOOLBAR_INDICE_GENERAL_LECTURA" translatable="false">Índice General de Lectura</string>
    <string name="TOOLBAR_INDICE_GENERAL_ESCRITURA" translatable="false">Índice General de Escritura</string>
    <string name="TOOLBAR_INDICE_GENERAL_MATEMATICO" translatable="false">Índice General Matemático</string>
    <string name="TOOLBAR_ORTOGRAFIA" translatable="false">Ortografía</string>
    <string name="TOOLBAR_EVALUA_3" translatable="false">Evalúa 3</string>
    <string name="TOOLBAR_MEMORIA_ATENCION" translatable="false">Memoria y Atención</string>
    <string name="TOOLBAR_REFLEXIVIDAD" translatable="false">Reflexividad</string>
    <string name="TOOLBAR_PENSAMIENTO_ANALOGICO" translatable="false">Pensamiento Analógico</string>
    <string name="TOOLBAR_VALORACION_GLOBAL" translatable="false">Valoración Global</string>
    <string name="TOOLBAR_RESOLUCION_PROBLEMAS" translatable="false">Resolución Problemas</string>
    <string name="TOOLBAR_EXACTITUD_LECTORA" translatable="false">Exactitud Lectora</string>
    <string name="EVALUA_0" translatable="false" tools:keep="@string/EVALUA_0">Evalúa 0</string>
    <string name="EVALUA_1" translatable="false" tools:keep="@string/EVALUA_1">Evalúa 1</string>
    <string name="EVALUA_2" translatable="false" tools:keep="@string/EVALUA_2">Evalúa 2</string>
    <string name="EVALUA_3" translatable="false" tools:keep="@string/EVALUA_3">Evalúa 3</string>
    <string name="EVALUA_4" translatable="false" tools:keep="@string/EVALUA_4">Evalúa 4</string>
    <string name="EVALUA_5" translatable="false" tools:keep="@string/EVALUA_5">Evalúa 5</string>
    <string name="EVALUA_6" translatable="false" tools:keep="@string/EVALUA_6">Evalúa 6</string>
    <string name="EVALUA_TOOL" translatable="false" tools:keep="@string/EVALUA_TOOL">Evalúa Tool</string>
    <string name="ICONO_LOGO_APP" translatable="false" tools:keep="@string/ICONO_LOGO_APP">Icono logo app</string>
    <string name="EVALUA_8" translatable="false" tools:keep="@string/EVALUA_8">Evalúa 8</string>
    <string name="EVALUA_9" translatable="false" tools:keep="@string/EVALUA_9">Evalúa 9</string>
    <string name="EVALUA_10" translatable="false" tools:keep="@string/EVALUA_10">Evalúa 10</string>
    <string name="EVALUA_7" translatable="false" tools:keep="@string/EVALUA_7">Evalúa 7</string>
    <string name="_0_pts" translatable="false" tools:keep="@string/_0_pts">0 pts</string>
    <string name="pd_total_corregido" translatable="false" tools:keep="@string/pd_total_corregido">PD Total corregido</string>
    <string name="puntaje_centil" translatable="false" tools:keep="@string/puntaje_centil">Puntaje Centil</string>
    <string name="nivel_obtenido" translatable="false" tools:keep="@string/nivel_obtenido">Nivel obtenido</string>
    <string name="guion_bajo" translatable="false" tools:keep="@string/guion_bajo">-</string>
    <string name="puntaje_tipificado" translatable="false" tools:keep="@string/puntaje_tipificado">Puntaje Tipificado</string>
    <string name="icono_ayuda" translatable="false" tools:keep="@string/icono_ayuda">Icono ayuda</string>
    <string name="version" translatable="false">"Versión "</string>
    <string name="SHARED_PREF_CRASHLYTICS_KEY">firebase_crashlytics</string>
    <string name="SHARED_PREF_PERFORMANCE_KEY">firebase_performace</string>
    <string name="SHARED_PREF_PRIVACY_POLICY">dialog_privacy_policy</string>
    <string name="acerca">Acerca</string>
    <string name="acerca_description">Aplicación móvil que facilita el cálculo de puntajes de evaluaciones pertenecientes a la batería de evaluaciones psicopedagógicas Evalúa - Chile Versión 2.0</string>
    <string name="SHARED_PREF_VERSION">version</string>
    <string name="privacy_policy">Política de privacidad</string>
</resources>