<!--

  This file is subject to the terms and conditions defined in
  file 'LICENSE', which is part of this source code package

  Autor: Felipe González
  Email: felipe.gonzalezalarcon94@gmail.com

  Copyright (c) 2022

  Last modified 31-10-22 12:13
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory
        app:icon="@drawable/ic_round_bug_report_24"
        app:iconSpaceReserved="true"
        app:title="Soporte">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="true"
            app:key="@string/SHARED_PREF_CRASHLYTICS_KEY"
            app:summary="Ayuda a mejorar la aplicación enviando datos de fallos"
            app:title="Reportes de fallos" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="true"
            app:key="@string/SHARED_PREF_PERFORMANCE_KEY"
            app:summary="Ayuda a mejorar la aplicación enviando datos de rendimiento"
            app:title="Reportes de rendimiento" />
    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_round_contact_support_24"
        app:iconSpaceReserved="true"
        app:title="@string/acerca">

        <Preference
            app:iconSpaceReserved="true"
            app:summary="@string/acerca_description" />

        <Preference
            app:allowDividerAbove="true"
            app:iconSpaceReserved="true"
            app:key="@string/SHARED_PREF_VERSION"
            app:title="@string/version"
            tools:summary="3.5" />

        <Preference
            app:allowDividerAbove="true"
            app:iconSpaceReserved="true"
            app:key="@string/SHARED_PREF_PRIVACY_POLICY"
            app:title="@string/privacy_policy" />

        <Preference
            app:allowDividerAbove="true"
            app:iconSpaceReserved="true"
            app:key="@string/contact_key"
            app:summary="@string/contact_summary"
            app:title="@string/contact_developer" />
    </PreferenceCategory>

</PreferenceScreen>