<?xml version="1.0" encoding="utf-8"?><!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                                                              ~
  This file is subject to the terms and conditions defined in                 ~
  file 'LICENSE', which is part of this source code package.                  ~
                                                                              ~
  Autor: Felipe González                                                      ~
  Email: felipe.gonzalezalarcon94@gmail.com                                   ~
                                                                              ~
  Copyright (c) 2020.                                                         ~
                                                                              ~
  Last modified 02-03-20 1:55                                                 ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/guia_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_evalua_7"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:padding="20dp"
            android:text="@string/EVALUA_7"
            android:transitionName="btn_evalua_7"
            app:layout_constraintEnd_toEndOf="@+id/btn_evalua_5"
            app:layout_constraintStart_toStartOf="@+id/btn_evalua_5"
            app:layout_constraintTop_toBottomOf="@+id/btn_evalua_5" />

        <include
            android:id="@+id/include"
            layout="@layout/toolbar_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guia_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.45"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guia_botones"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.32"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_evalua_0"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:elevation="8dp"
            android:fontFamily="@font/roboto"
            android:padding="20dp"
            android:text="@string/EVALUA_0"
            app:layout_constraintEnd_toStartOf="@+id/guia_central"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guia_botones" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_evalua_1"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:elevation="8dp"
            android:fontFamily="@font/roboto"
            android:padding="20dp"
            android:text="@string/EVALUA_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guia_central"
            app:layout_constraintTop_toTopOf="@+id/guia_botones" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_evalua_2"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:padding="20dp"
            android:text="@string/EVALUA_2"
            app:layout_constraintEnd_toEndOf="@+id/btn_evalua_0"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btn_evalua_0"
            app:layout_constraintTop_toBottomOf="@+id/btn_evalua_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_evalua_3"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:padding="20dp"
            android:text="@string/EVALUA_3"
            app:layout_constraintEnd_toEndOf="@+id/btn_evalua_1"
            app:layout_constraintStart_toStartOf="@+id/btn_evalua_1"
            app:layout_constraintTop_toBottomOf="@+id/btn_evalua_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_evalua_4"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:padding="20dp"
            android:text="@string/EVALUA_4"
            app:layout_constraintEnd_toEndOf="@+id/btn_evalua_2"
            app:layout_constraintStart_toStartOf="@+id/btn_evalua_2"
            app:layout_constraintTop_toBottomOf="@+id/btn_evalua_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_evalua_5"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:padding="20dp"
            android:text="@string/EVALUA_5"
            app:layout_constraintEnd_toEndOf="@+id/btn_evalua_3"
            app:layout_constraintStart_toStartOf="@+id/btn_evalua_3"
            app:layout_constraintTop_toBottomOf="@+id/btn_evalua_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_evalua_6"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:fontFamily="@font/roboto"
            android:padding="20dp"
            android:text="@string/EVALUA_6"
            app:layout_constraintEnd_toEndOf="@+id/btn_evalua_4"
            app:layout_constraintStart_toStartOf="@+id/btn_evalua_4"
            app:layout_constraintTop_toBottomOf="@+id/btn_evalua_4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guia_central"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tv_nombre_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/EVALUA_TOOL"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorOnPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo_app" />

        <ImageView
            android:id="@+id/iv_logo_app"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/ICONO_LOGO_APP"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorOnPrimary"
            app:layout_constraintBottom_toTopOf="@+id/guia_botones"
            app:layout_constraintEnd_toEndOf="@+id/tv_nombre_app"
            app:layout_constraintStart_toStartOf="@+id/tv_nombre_app"
            app:layout_constraintTop_toBottomOf="@+id/tv_nombre_app"
            app:layout_constraintVertical_bias="0.0"
            tools:text="v1.0.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_evalua_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:padding="20dp"
            android:text="@string/EVALUA_8"
            app:layout_constraintEnd_toEndOf="@+id/btn_evalua_6"
            app:layout_constraintStart_toStartOf="@+id/btn_evalua_6"
            app:layout_constraintTop_toBottomOf="@+id/btn_evalua_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_evalua_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:padding="20dp"
            android:text="@string/EVALUA_9"
            app:layout_constraintEnd_toEndOf="@+id/btn_evalua_7"
            app:layout_constraintStart_toStartOf="@+id/btn_evalua_7"
            app:layout_constraintTop_toBottomOf="@+id/btn_evalua_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_evalua_10"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto"
            android:padding="20dp"
            android:text="@string/EVALUA_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_evalua_9"
            app:layout_constraintStart_toStartOf="@+id/btn_evalua_8"
            app:layout_constraintTop_toBottomOf="@+id/btn_evalua_8"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>